# tearsheet

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: dossier_hotfixes_spec.md  foundation-build-guide.md  option_a_qualitative_spec.md  option_b_financials_spec.md  semantic_chunker_spec.md  writer_layer_spec.md
tearsheet/: __init__.py  cli.py  config.py  pipeline.py
tearsheet/edgar/: __init__.py  client.py  filings.py  submissions.py  tickers.py  xbrl.py
tearsheet/extract/: __init__.py  financials.py  grounding.py  llm_client.py  qualitative.py  schemas.py
tearsheet/extract/prompts/: business.txt  competition.txt  management_discussion.txt  mda.txt  risk_factors.txt
tearsheet/parse/: __init__.py  documents.py  html_clean.py  sectioner.py
tearsheet/store/: __init__.py  db.py  models.py  repository.py
tearsheet/writer/: dossier.py  metrics.py  renderer.py
tests/: __init__.py  test_cli.py  test_pipeline.py  test_scaffold.py
tests/edgar/: test_client.py  test_filings.py  test_submissions.py  test_tickers.py  test_xbrl.py
tests/extract/: test_financials.py  test_grounding.py  test_llm_client.py  test_qualitative.py  test_schemas.py
tests/parse/: test_documents.py  test_html_clean.py  test_sectioner.py
tests/store/: test_db.py  test_models.py  test_repository.py
tests/writer/: test_metrics.py  test_renderer.py
